# mmsegmentation

./: pyproject.toml  pyrightconfig.json
mmseg/: __init__.py
mmseg/apis/: mmseg_inferencer.py
